# MpembaVideoAnalysis

./: Analyzer.cpp  Analyzer.h  CMakeLists.txt  Calibrator.cpp  Calibrator.h  Detection.cpp  Detection.h  Frozen T Cool -33-0 T Warm 70-0 Oil 700 Water 10-distances.csv  Frozen T Cool -33-0 T Warm 70-0 Oil 700 Water 10-droplet_count_frozen.csv  Frozen T Cool -33-0 T Warm 70-0 Oil 700 Water 10-volumes.csv  README.md  analysis.py  analysis.sh  main.cpp  main.py  mpemba.py  test_mpemba.py
.github/workflows/: cmake-single-platform.yml  python-app.yml
GUI/: CMakeLists.txt  FilePropertiesWidget.cpp  FilePropertiesWidget.h  Measurement.cpp  Measurement.h  RunPropertiesWidget.cpp  RunPropertiesWidget.h  SetupPropertiesWidget.cpp  SetupPropertiesWidget.h  Window.cpp  Window.h  main.cpp
PyDataEvaluation/: createCasefiles.py  main.py  mpemba.py  mpemba_plot.py  requirements.txt  test_mpemba.py
Scripts/: analysis.sh  flip.sh
TestData/: Frozen T Cool -33-0 T Warm 70-0 Oil 700 Water 10-droplet_count.csv  case_file1.cf
VideoAnalysis/: AnalysisConfig.cpp  AnalysisConfig.h  Analyzer.cpp  CMakeLists.txt  Droplet.cpp  Droplet.h  Frame.cpp  Frame.h  FrameProcessor.cpp  FrameProcessor.h  Measurement.cpp  Measurement.h  Processor.cpp  Processor.h  main.cpp
